Sep 2009: .008
  - Add missing POD header

Sep 2009: .007
  - Added traditional smoothed noise source for Perlin
  - Many new options for combining noise sources
  - New noise types: ridged multifractal and "gel" types
  - Added some simple color mapping options
  - More futzing with spheremap scaling
  - Added gappiness option (ie for starfields)
  - Tweaked defaults for about 500 reasonable complex noise presets
  - Rewrote POD

Sep 2009: .006
  - Added a script to generate lots of example noise
  - Tweaked scale at polar regions to more closely match look of equator
  - Refractive spheremaps should look better

Sep 2009: .005
  - Added spheremap option! They're fake but good.
  - Added refractive palette option, looks like fractals
  - Fixed bug with size of output images, was off by one in smooth function
  - Added $QUIET option
  - Allow negative feather vals for cool effects
  - Complex noise now skips an un-needed smoothing step
  - Tweaked default args

Sep 2009: .004
  - Added example images to ex/ dir and inline with pod

Sep 2009: .001
  - Initial release
